fixing spacing issues

--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,8 @@ nav a:hover {
 #header {
   padding-top: 0;
   margin-top: 0;
-  box-sizing:border-box;
+  box-sizing: border-box;
   background-color: #e6ebe0;
   position: fixed;
-  width: 100%
+  width: 100%;
 }
